# paygate

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN-REVIEW.md  DESIGN.md  Dockerfile  ENG-REVIEW.md  README.md  SPEC.md  TODOS.md  package-lock.json  package.json  paygate.toml.example  schema.sql
.github/workflows/: pages.yml
.gstack/qa-reports/: code-review-2026-03-19.md  qa-report-paygate-2026-03-19.md
apps/tips-web/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
contracts/: foundry.toml
contracts/src/: PayGateEscrow.sol  PayGateRegistry.sol
contracts/test/: PayGateRegistry.t.sol
crates/paygate-client/: Cargo.toml
crates/paygate-client/src/: client.rs  lib.rs
crates/paygate-common/: Cargo.toml
crates/paygate-common/src/: hash.rs  lib.rs  mpp.rs  types.rs
crates/paygate-gateway/: Cargo.toml
crates/paygate-gateway/src/: admin.rs  cli.rs  config.rs  db.rs  helpers.rs  main.rs  metrics.rs  mpp.rs  npm_resolver.rs  payout.rs  proxy.rs  rate_limit.rs  serve.rs  server.rs  sessions.rs  sponsor.rs  tip.rs  verifier.rs  webhook.rs
demo/: Dockerfile  entrypoint.sh  package-lock.json  package.json  paygate.toml
demo/src/: server.ts
demo/tests/: image.test.ts  pricing.test.ts  scrape.test.ts  search.test.ts  summarize.test.ts
docs/: agent-tips-quickstart.md  index.html  llms.txt  marketplace.html  og-image.html  quickstart.html  style.css
docs/designs/: architecture-diagrams.md  (+10 more)
sdk/: marketplace-e2e.mjs  package-lock.json  package.json  spam-test.mjs  sponsor-e2e.mjs  testnet-e2e.mjs
test-e2e/: echo-server.js  paygate-test.toml  paygate-testnet.toml  testnet-e2e.mjs
worktree-briefs/: pane-cli-tools-brief.md  pane-demo-apis-brief.md  pane-dynamic-pricing-brief.md  pane-fill-tests-brief.md  pane-governance-brief.md  pane-landing-brief.md  pane-mcp-server-brief.md  pane-sdk-enhancements-brief.md  pane-sessions-brief.md  pane-split-main-brief.md  pane-sponsor-brief.md  pane-sponsorship-brief.md  pane-tx-backend-brief.md  pane-tx-frontend-brief.md  pane1-verifier.md  pane2-cli.md  pane3-ts-sdk.md  pane4-contracts.md  prompt-cli-tools.md  prompt-demo-apis.md  prompt-dynamic-pricing.md  prompt-fill-tests.md  prompt-governance.md  prompt-landing.md  prompt-mcp-server.md  prompt-sdk-enhancements.md  prompt-sessions.md  prompt-split-main.md  prompt-sponsor.md  prompt-sponsorship.md  prompt-tx-backend.md  prompt-tx-frontend.md  prompt1-verifier.md  prompt2-cli.md  prompt3-ts-sdk.md  prompt4-contracts.md  prompt5-review.md  prompt6-document-release.md  prompt7-verify-tempo.md  prompt8-tests.md
(+40 files in other folders)
