[workspace]
resolver = "2"
members = [
    "crates/paygate-gateway",
    "crates/paygate-common",
    "crates/paygate-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/example/paygate"

[workspace.dependencies]
# Shared across crates
alloy-primitives = { version = "1", features = ["serde"] }
alloy-sol-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
hex = "0.4"
