[package]
name = "paygate-client"
version.workspace = true
edition.workspace = true

[dependencies]
paygate-common = { path = "../paygate-common" }
alloy-primitives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
