[package]
name = "paygate-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "paygate"
path = "src/main.rs"

[dependencies]
paygate-common = { path = "../paygate-common" }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
axum = "0.8"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.33", features = ["bundled"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
arc-swap = "1"
governor = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
